--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <div class="col-sm-6 text-right">
         <div class="input-border">
           &pound;
-          <input type="number" min="50" step="1" max=400 name="borrowing" onchange="setBorrowing(this.value)"/>
+          <input type="number" min="50" max=400 name="borrowing"/>
         </div>
       </div>
     </div>
@@ -31,7 +31,7 @@
         <span id="decBorrowing" class="glyphicon glyphicon-minus-sign"/>
       </div>
       <div class="col-sm-10">
-        <input type="range" name="borrowing" min="50" max="400" oninput="setBorrowing(this.value)"/>
+        <input type="range" name="borrowing" min="50" max="400" step="1"/>
       </div>
       <div class="col-xs-1 text-center">
         <span id="incBorrowing" class="glyphicon glyphicon-plus-sign"/>
@@ -43,7 +43,7 @@
       <div class="col-sm-6 text-right">
         (Repayment date: <span id="repaymentDate"></span>)
         <div class="input-border">
-          <input type="number" min="1" step="1" max=30 name="duration" onchange="setDuration(this.value)"/>
+          <input type="number" min="1" max=30 name="duration"/>
           days
         </div>
       </div>
@@ -53,7 +53,7 @@
         <span id="decDuration" class="glyphicon glyphicon-minus-sign"/>
       </div>
       <div class="col-sm-10">
-        <input type="range" name="duration" min="1" max="30" oninput="setDuration(this.value)"/>
+        <input type="range" name="duration" min="1" max="30" step="1"/>
       </div>
       <div class="col-xs-1 text-center">
         <span id="incDuration" class="glyphicon glyphicon-plus-sign"/>
@@ -89,11 +89,13 @@
         <button type="button" class="btn btn-danger">Apply now</button>
       </div>
     </div>
+  </div>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 
-    <script src="utility.js"></script>
-    <script src="main.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 
-  </body>
+  <script src="utility.js"></script>
+  <script src="main.js"></script>
+
+</body>
